--- a/get-html-via-nodejs/package.json
+++ b/get-html-via-nodejs/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/nodejs-d/get-html.repo#readme",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.2",
     "request": "^2.83.0"
   }
